erDiagram
  users ||--o{ attendance_records : has
  attendance_records ||--o{ breaks : has
  users ||--o{ applications : submits
  attendance_records ||--o{ applications : for
  applications ||--o{ application_breaks : proposes

  users {
    bigint id PK
    string name
    string email UK
    timestamp email_verified_at
    string password
    string remember_token
    tinyint admin_status
    string attendance_status
    timestamp created_at
    timestamp updated_at
  }

  attendance_records {
    bigint id PK
    bigint user_id FK
    date date
    time clock_in
    time clock_out
    string total_break_time
    string total_time
    text comment
    timestamp created_at
    timestamp updated_at
  }

  breaks {
    bigint id PK
    bigint attendance_record_id FK
    time break_in
    time break_out
    timestamp created_at
    timestamp updated_at
  }

  applications {
    bigint id PK
    bigint user_id FK
    bigint attendance_record_id FK
    string approval_status
    date application_date
    date new_date
    time new_clock_in
    time new_clock_out
    text comment
    timestamp created_at
    timestamp updated_at
  }

  application_breaks {
    bigint id PK
    bigint application_id FK
    time break_in
    time break_out
    timestamp created_at
    timestamp updated_at
  }
